--- a/README
+++ b/README
@@ -1,5 +1,3 @@
-Many modifications listed under this directory are unfinished and unsupported.
+Modifications in this repository may be used at your own risk.
 
-If the modification is not listed on my site (lithiumstudios.org) it is NOT supported, nor will it be supported.
-
-Old versions of modifications found in this repository are not supported either.
+Support for most mods can be found at my website until March 2014: http://nmguse.webfactional.com/forum/
